<resources>
    <string name="app_name">Book My Sport</string>
    <string name="Sample">Sample</string>
    <string name="slot">Time Slot</string>
    <string name="logout">Logout</string>
    <string name="coming_soon_profile">COMING SOON, Profile</string>
    <string name="book_my_sports">Book My Sports Logo</string>
    <string name="iiitd_logo">IIITD LOGO</string>
    <string name="test_activity">TEST ACTIVITY</string>
    <string name="badminton">Badminton</string>
    <string name="basketball">Basketball</string>
    <string name="pool">Pool</string>
    <string name="snooker">Snooker</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="squash">squash</string>
    <string name="swimming">SWIMMING</string>
    <string name="sport_name">Sport Name</string>
    <string name="date">Date</string>
    <string name="endTime">Time</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="sports">Sports</string>
    <string name="my_bookings">My Bookings</string>
    <string name="profile">Profile</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="enter_4st_rollno">Enter 4th Rollno</string>
    <string name="enter_3st_rollno">Enter 3rd Rollno</string>
    <string name="enter_2st_rollno">Enter 2nd Rollno</string>
    <string name="enter_1st_rollno">Enter 1st Rollno</string>
    <string name="test">TEST</string>
    <string name="slot_time">SLOT TIME</string>
    <string name="occupied">OCCUPIED</string>
    <string name="book">BOOK</string>
    <string name="back">BACK</string>
    <string name="booked">Booked Slots</string>
</resources>

