<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_background"
    android:backgroundTint="@color/themecolor"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <TextView
            android:id="@+id/slottimeRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/slot_time"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/occupiedRV"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:fontFamily="@font/yk_neophyte"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/occupied"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leftRV"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:fontFamily="@font/yk_neophyte"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Sample"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bookRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yk_neophyte"
                android:text="@string/book"
                android:background="@drawable/cancel_booking"
                android:textColor="@android:color/black"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>



</LinearLayout>