<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Book Slot"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:id="@+id/t_book"/>

    <Switch
        android:layout_marginTop="10dp"
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:text="Singles"
        android:layout_gravity="center"
        android:checked="false"
        android:textOff="Singles"
        android:textOn="Doubles"/>
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/r1"
            android:inputType="number"
            android:hint="@string/enter_1st_rollno"
            />
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:layout_gravity="center"
            android:id="@+id/r2"
            android:hint="@string/enter_2st_rollno"
            />
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:layout_gravity="center"
            android:id="@+id/r3"
            android:hint="@string/enter_3st_rollno"
            />
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:layout_gravity="center"
            android:id="@+id/r4"
            android:hint="@string/enter_4st_rollno"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c_book"
            android:text="Cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s1_book"
            android:text="Table 1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s2_book"
            android:text="Table 2"/>

    </LinearLayout>
</LinearLayout>