<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:background="@drawable/layout_background"
    android:backgroundTint="@color/themecolor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mybookings_sportname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="10dp"
        android:text="@string/sport_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">


            <TextView
                android:id="@+id/mybookings_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yk_neophyte"
                android:padding="10dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mybookings_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yk_neophyte"
                android:padding="10dp"
                android:text="@string/endTime"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mybookings_tableNO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yk_neophyte"
                android:padding="10dp"
                android:text="TABLE NO"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mybookings_bookedType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yk_neophyte"
                android:padding="10dp"
                android:text="BOOKED TYPE"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/mybookings_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cancel_booking"
        android:text="@string/cancel_booking"
        android:padding="5dp"/>
</LinearLayout>