<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:background="@color/themecolor"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/book_my_sports" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alegreya_sans_sc"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textFontWeight="800"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:orientation="vertical">


        <TextView
            android:id="@+id/emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_email_24px"
            android:drawablePadding="12dp"
            android:drawableTint="@color/themecolor"
            android:fontFamily="@font/yk_neophyte"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/rollnoTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_subject_24px"
            android:drawablePadding="12dp"
            android:drawableTint="@color/themecolor"
            android:fontFamily="@font/yk_neophyte"
            android:text="@string/test"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/batchTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:drawableLeft="@drawable/ic_info_24px"
            android:drawablePadding="12dp"
            android:drawableTint="@color/themecolor"
            android:fontFamily="@font/yk_neophyte"
            android:text="@string/test"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/themecolor"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/logout">

        </Button>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</LinearLayout>