<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SportsSD">


    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/game_nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alegreya_sans_sc"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/booked"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="Table 1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="Table 2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:fadeScrollbars="false"
            android:scrollbarSize="10dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"/>


    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/montserrat_light"
                android:hint="Choose the start time"
                android:inputType="time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/montserrat_light"
                android:hint="Choose the end time"
                android:inputType="time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="0 min"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bookBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/cancel_booking"
                android:text="@string/back" />

            <Button
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/cancel_booking"
                android:text="@string/book" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>